--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
+    <title>Map Design</title>
     <meta charset="utf-8" />
-    <title>Demo: Make a heatmap with Mapbox GL JS</title>
-    <meta name="robots" content="noindex, nofollow" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css" rel="stylesheet">
 
     <style>
         body {
@@ -20,127 +20,152 @@
             width: 100%;
         }
 
-        #legend {
-            position: absolute;
-            bottom: 0;
-            right: 0;
+        /* the style of the layer control menu */
+        #menu {
             background: #fff;
-            margin-right: 20px;
-            border-radius: 3px;
-            padding: 10px;
-            text-align: center;
-            margin-bottom: 40px;
-            width: 100px;
-        }
-
-        .break {
-            position: relative;
-            margin: 0px;
-            padding: 0px;
-        }
-
-        .dot {
-            display: inline-block;
-            margin-top: 5px;
-            border-radius: 50%;
-            opacity: 0.6;
-        }
-
-        .dot-label {
             position: absolute;
-            top: 0;
-            right: 0;
-            font-style: italic;
+            z-index: 1;
+            top: 10px;
+            right: 10px;
+            border-radius: 3px;
+            width: 120px;
+            border: 1px solid rgba(0, 0, 0, 0.4);
+            font-family: 'Open Sans', sans-serif;
         }
-        a {
-            color: black
-        }
-        .slice {
-            display: inline-block;
-            width: 4px;
-            height: 10px;
-        }
-        .placeholder {
-            display: inline-block;
-            width: 30px;
 
+        /* each layer on the menu */
+        #menu a {
+            font-size: 13px;
+            color: #404040;
+            display: block;
+            margin: 0;
+            padding: 0;
+            padding: 10px;
+            text-decoration: none;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+            text-align: center;
+        }
+
+        /* the last item of the layer items will not include a seperator */
+        #menu a:last-child {
+            border: none;
+        }
+
+        /* change color and background color while a pointer is on an hybrid link. */
+        #menu a:hover {
+            background-color: #f8f8f8;
+            color: #404040;
+        }
+
+        #menu a.active {
+            background-color: #3887be;
+            color: #ffffff;
+        }
+
+        #menu a.active:hover {
+            background: #3074a4;
         }
     </style>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" rel="stylesheet">
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"></script>
-
-
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js"></script>
 </head>
 
 <body>
-    <div id="map"></div>
-    <div id="legend"></div>
-    <script>
+    <nav id="menu"></nav>
+    <div id='map'></div>
+    <script type="text/javascript">
         mapboxgl.accessToken =
-            'pk.eyJ1IjoibWFsLXdvb2QiLCJhIjoiY2oyZ2t2em50MDAyMzJ3cnltMDFhb2NzdiJ9.X-D4Wvo5E5QxeP7K_I3O8w';
-        const map = new mapboxgl.Map({
+            'pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw';
+        let map = new mapboxgl.Map({
             container: 'map', // container ID
             style: 'mapbox://styles/mapbox/dark-v10',
-            zoom: 3, // starting zoom
-            minZoom: 3,
-            center: [138, 38] // starting center
+            zoom: 12, // starting zoom
+            center: [-122.2559435, 47.6002614] // starting center
         });
 
-        var grades = [4, 5, 6],
-            colors = ['rgb(208,209,230)', 'rgb(103,169,207)', 'rgb(1,108,89)'],
-            radii = [5, 15, 20];
+        map.on('load', () => { //simplifying the function statement: arrow with brackets to define a function
 
-
-        map.on('load', () => {
-            map.addSource('earthquakes', {
-                'type': 'geojson',
-                'data': 'assets/earthquakes.geojson'
+            map.addSource('blue-monochrome', {
+                'type': 'raster',
+                'tiles': [
+                    'assets/tile set 1/{z}/{x}/{y}.png'
+                ],
+                'tileSize': 256,
+                'attribution': 'Map tiles designed by Mason Howes</a>'
             });
+
+            map.addLayer({
+                'id': 'bm',
+                'type': 'raster',
+                'layout': {
+                    'visibility': 'none'
+                },
+                'source': 'blue-monochrome'
+            });
+
         });
 
-        // click on tree to view magnitude in a popup
-        map.on('click', 'earthquakes-point', (event) => {
-            new mapboxgl.Popup()
-                .setLngLat(event.features[0].geometry.coordinates)
-                .setHTML(`<strong>Magnitude:</strong> ${event.features[0].properties.mag}`)
-                .addTo(map);
+
+        // After the last frame rendered before the map enters an "idle" state.
+        map.on('idle', () => {
+            // If these two layers were not added to the map, abort
+            if (!map.getLayer('bm')) {
+                return;
+            }
+
+            // Enumerate ids of the layers.
+            const toggleableLayerIds = ['bm'];
+
+            // Set up the corresponding toggle button for each layer.
+            for (const id of toggleableLayerIds) {
+                // Skip layers that already have a button set up.
+                if (document.getElementById(id)) {
+                    continue;
+                }
+
+                // Create a link.
+                const link = document.createElement('a');
+                link.id = id;
+                link.href = '#';
+                link.textContent = id;
+                link.className = 'inactive';
+
+                // Show or hide layer when the toggle is clicked.
+                link.onclick = function (e) {
+                    const clickedLayer = this.textContent;
+                    // preventDefault() tells the user agent that if the event does not get explicitly handled, 
+                    // its default action should not be taken as it normally would be.
+                    e.preventDefault();
+                    // The stopPropagation() method prevents further propagation of the current event in the capturing 
+                    // and bubbling phases. It does not, however, prevent any default behaviors from occurring; 
+                    // for instance, clicks on links are still processed. If you want to stop those behaviors, 
+                    // see the preventDefault() method.
+                    e.stopPropagation();
+
+                    const visibility = map.getLayoutProperty(
+                        clickedLayer,
+                        'visibility'
+                    );
+
+                    // Toggle layer visibility by changing the layout object's visibility property.
+                    // if it is currently visible, after the clicking, it will be turned off.
+                    if (visibility === 'visible') {
+                        map.setLayoutProperty(clickedLayer, 'visibility', 'none');
+                        this.className = '';
+                    } else { //otherise, it will be turned on.
+                        this.className = 'active';
+                        map.setLayoutProperty(
+                            clickedLayer,
+                            'visibility',
+                            'visible'
+                        );
+                    }
+                };
+
+                // in the menu place holder, insert the layer links.
+                const layers = document.getElementById('menu');
+                layers.appendChild(link);
+            }
         });
-
-        // create legend
-        const legend = document.getElementById('legend');
-
-        //set up legend grades and labels
-        var labels = ['<strong class="break">Magnitude</strong>'], vbreak;
-        //iterate through grades and create a scaled circle and label for each
-        for (var i = 0; i < grades.length; i++) {
-            vbreak = grades[i];
-            // you need to manually adjust the radius of each dot on the legend 
-            // in order to make sure the legend can be properly referred to the dot on the map.
-            dot_radii = 2 * radii[i];
-            labels.push(
-                '<p class="break"><i class="dot" style="background:' + colors[i] + '; width: ' + dot_radii +
-                'px; height: ' +
-                dot_radii + 'px; "></i> <span class="dot-label" style="top: ' + dot_radii / 2 + 'px;">' + vbreak +
-                '</span></p>');
-
-        }
-        labels.push('<hr />');
-        labels.push('<strong class="break">Frequency</strong>');
-        labels.push('<p class="break">');
-        let legend_colors = chroma.scale(['rgba(236,222,239,0)', 'rgb(28,144,153)']).colors(20);
-
-        for (var i = 0; i < 20; i++) {
-            labels.push(
-                '<span class="slice" style="background:' + legend_colors[i] + ';"></span>');
-        }
-        labels.push('</p>');
-        labels.push('<p class="break"> less <span class="placeholder"> </span> more</p>');
-        const source = '<p style="text-align: right; font-size:10pt">Source: <a href="https://earthquake.usgs.gov/earthquakes/">USGS</a></p>';
-        
-        legend.innerHTML = labels.join('') + source;
-
-        
     </script>
 </body>
 
