--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             map.addSource('blue-monochrome', {
                 'type': 'raster',
                 'tiles': [
-                    'assets/Blue-Monochrome/{z}/{x}/{y}.png'
+                    'assets/SkyBlue-Monochrome/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
                 'attribution': 'Map tiles designed by Mason Howes</a>'
