--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
             });
 
             map.addLayer({
+                'id': 'bm',
+                'type': 'raster',
+                'layout': {
+                    'visibility': 'none'
+                },
+                'source': 'bluemono'
+            });
+            
+            map.addLayer({
                 'id': 'parks',
                 'type': 'raster',
                 'layout': {
