--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             container: 'map', // container ID
             style: 'mapbox://styles/mapbox/dark-v10',
             zoom: 12, // starting zoom
-            center: [-122.302265017245, 47.65194280267416] // starting center
+            center: [-122.2559435, 47.6002614] // starting center
         });
 
         map.on('load', () => { //simplifying the function statement: arrow with brackets to define a function
 
-            map.addSource('bluemono', {
+            map.addSource('bluemonochrome', {
                 'type': 'raster',
                 'tiles': [
                     'assets/BlueMonochrome/{z}/{x}/{y}.png'
@@ -99,18 +99,18 @@
                     'assets/Park/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
-                'attribution': 'Map tiles designed by Mason Howes</a>'
+                'attribution': 'Map tiles designed by Mason Howes'
             });
 
             map.addLayer({
-                'id': 'bm',
+                'id': 'blue monochrome',
                 'type': 'raster',
                 'layout': {
                     'visibility': 'none'
                 },
-                'source': 'bluemono'
+                'source': 'bluemonochrome'
             });
-            
+
             map.addLayer({
                 'id': 'parks',
                 'type': 'raster',
@@ -120,31 +120,18 @@
                 'source': 'park'
             });
 
-             map.on('idle', () => {
-                const visibleLayers = map.getStyle().layers.filter(layer => map.getLayoutProperty(layer.id, 'visibility') === 'visible');
-                const visibleLayerId = visibleLayers[0].id; // Assuming only one layer is visible at a time
-                document.getElementById('description').textContent = descriptions[visibleLayerId];
-            });
-
-            // Toggle layer visibility when clicking on the layer menu
-            document.getElementById('menu').addEventListener('click', function(e) {
-                const layerId = e.target.textContent;
-                const visibility = map.getLayoutProperty(layerId, 'visibility');
-                map.setLayoutProperty(layerId, 'visibility', visibility === 'visible' ? 'none' : 'visible');
-            });
-
         });
 
 
         // After the last frame rendered before the map enters an "idle" state.
         map.on('idle', () => {
             // If these two layers were not added to the map, abort
-            if (!map.getLayer('bm')) || !map.getLayer('parks')) {
+            if (!map.getLayer('blue monochrome') || !map.getLayer('parks')) {
                 return;
             }
 
             // Enumerate ids of the layers.
-            const toggleableLayerIds = ['bm', 'parks'];
+            const toggleableLayerIds = ['blue monochrome', 'parks'];
 
             // Set up the corresponding toggle button for each layer.
             for (const id of toggleableLayerIds) {
